5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4191/executions/1716_2497.log
== TEST (2019-05-09 16:31:26) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0
rend=0
# Atualizacao de saldo
while (t>1):
	rend = saldo * juros
	saldo = saldo + rend
	t = saldo+t

	print(round(saldo, 2)) # Exibicao de resultados

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    qi = int(input())
ValueError: invalid literal for int() with base 10: '575.25'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:31:50) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0
rend=0
# Atualizacao de saldo
while (t>1):
	rend = saldo * juros
	saldo = saldo + rend
	t = saldo+t
	print(round(saldo, 2)) # Exibicao de resultados

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    qi = int(input())
ValueError: invalid literal for int() with base 10: '575.25'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:32:13) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0
rend=0
# Atualizacao de saldo
while (t>1):
	rend = saldo * juros
	saldo = saldo + rend
	t = saldo+t
	print(round(saldo, 2))

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    qi = int(input())
ValueError: invalid literal for int() with base 10: '575.25'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:32:31) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0
rend=0
# Atualizacao de saldo
while (t>1):
	rend = saldo * juros
	saldo = saldo + rend
	t = saldo+t
	print(round(saldo, 2))

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    qi = int(input())
ValueError: invalid literal for int() with base 10: '575.25'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:32:44) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0
rend=0
# Atualizacao de saldo
while (t<0):
	rend = saldo * juros
	saldo = saldo + rend
	t = saldo+t
	print(round(saldo, 2))

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    qi = int(input())
ValueError: invalid literal for int() with base 10: '575.25'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:33:21) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0
rend=0
# Atualizacao de saldo
while (t!=0):
	rend = saldo * juros
	saldo = saldo + rend
	t = saldo+t
	print(round(saldo, 2))

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    qi = int(input())
ValueError: invalid literal for int() with base 10: '575.25'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:34:27) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0
rend=0
# Atualizacao de saldo
while(t!=0):
	rend = saldo * juros
	saldo = saldo + rend
	t = saldo+ 4/100
	print(round(saldo, 2))

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    qi = int(input())
ValueError: invalid literal for int() with base 10: '575.25'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:35:29) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0
rend=0
# Atualizacao de saldo
while(juros!=0):
	rend = saldo * juros
	saldo = saldo + rend
	t = saldo+ 4/100
	print(round(salod, 2))
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 18, in <module>
    print(round(salod, 2))
NameError: name 'salod' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:35:44) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0
rend=0
# Atualizacao de saldo
while(juros!=0):
	rend = saldo * juros
	saldo = saldo + rend
	t = saldo+ 4/100
	print(round(saldo, 2))
	

-- OUTPUT:
2876.25
14381.25
71906.25
359531.25
1797656.25
8988281.25
44941406.25
224707031.25
1123535156.25
5617675781.25
28088378906.25
140441894531.25
702209472656.25
3511047363281.25
17555236816406.25
87776184082031.25
438880920410156.25
2194404602050781.2
1.0972023010253906e+16
5.486011505126953e+16
2.7430057525634765e+17
1.3715028762817382e+18
6.857514381408691e+18
3.4287571907043455e+19
1.7143785953521726e+20
8.571892976760863e+20
4.2859464883804313e+21
2.1429732441902155e+22
1.0714866220951077e+23
5.3574331104755387e+23
2.6787165552377693e+24
1.3393582776188846e+25
6.696791388094423e+25
3.3483956940472114e+26
1.6741978470236056e+27
8.370989235118029e+27
4.185494617559014e+28
2.092747308779507e+29
1.0463736543897535e+30
5.231868271948767e+30
2.6159341359743834e+31
1.3079670679871918e+32
6.539835339935959e+32
3.2699176699679793e+33
1.6349588349839897e+34
8.174794174919949e+34
4.087397087459974e+35
2.043698543729987e+36
1.0218492718649934e+37
5.109246359324967e+37
2.5546231796624837e+38
1.277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:07:10) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0
rend=0
# Atualizacao de saldo
while(tempo!=t):
	rend = saldo * juros
	saldo = saldo + rend
	t = saldo+ 4/100
print(round(saldo, 2))
	

-- OUTPUT:
2876.25
14381.25
71906.25
359531.25
1797656.25
8988281.25
44941406.25
224707031.25
1123535156.25
5617675781.25
28088378906.25
140441894531.25
702209472656.25
3511047363281.25
17555236816406.25
87776184082031.25
438880920410156.25
2194404602050781.2
1.0972023010253906e+16
5.486011505126953e+16
2.7430057525634765e+17
1.3715028762817382e+18
6.857514381408691e+18
3.4287571907043455e+19
1.7143785953521726e+20
8.571892976760863e+20
4.2859464883804313e+21
2.1429732441902155e+22
1.0714866220951077e+23
5.3574331104755387e+23
2.6787165552377693e+24
1.3393582776188846e+25
6.696791388094423e+25
3.3483956940472114e+26
1.6741978470236056e+27
8.370989235118029e+27
4.185494617559014e+28
2.092747308779507e+29
1.0463736543897535e+30
5.231868271948767e+30
2.6159341359743834e+31
1.3079670679871918e+32
6.539835339935959e+32
3.2699176699679793e+33
1.6349588349839897e+34
8.174794174919949e+34
4.087397087459974e+35
2.043698543729987e+36
1.0218492718649934e+37
5.109246359324967e+37
2.5546231796624837e+38
1.277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:07:38) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0
rend=0
# Atualizacao de saldo
while(tempo!=t):
	rend = saldo * juros
	saldo = saldo + rend
	t = saldo+ 4/100

	
	
print(round(saldo, 2))
	

-- OUTPUT:
2876.25
14381.25
71906.25
359531.25
1797656.25
8988281.25
44941406.25
224707031.25
1123535156.25
5617675781.25
28088378906.25
140441894531.25
702209472656.25
3511047363281.25
17555236816406.25
87776184082031.25
438880920410156.25
2194404602050781.2
1.0972023010253906e+16
5.486011505126953e+16
2.7430057525634765e+17
1.3715028762817382e+18
6.857514381408691e+18
3.4287571907043455e+19
1.7143785953521726e+20
8.571892976760863e+20
4.2859464883804313e+21
2.1429732441902155e+22
1.0714866220951077e+23
5.3574331104755387e+23
2.6787165552377693e+24
1.3393582776188846e+25
6.696791388094423e+25
3.3483956940472114e+26
1.6741978470236056e+27
8.370989235118029e+27
4.185494617559014e+28
2.092747308779507e+29
1.0463736543897535e+30
5.231868271948767e+30
2.6159341359743834e+31
1.3079670679871918e+32
6.539835339935959e+32
3.2699176699679793e+33
1.6349588349839897e+34
8.174794174919949e+34
4.087397087459974e+35
2.043698543729987e+36
1.0218492718649934e+37
5.109246359324967e+37
2.5546231796624837e+38
1.277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:46:03) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0
rend=0
# Atualizacao de saldo
while(t<tempo)
	rend = saldo * juros
	saldo = saldo + rend
	t = saldo+ 4/100

	
	
print(round(saldo, 2))
	

-- ERROR:
File "XXXX", line 14
    while(t<tempo)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:46:08) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0
rend=0
# Atualizacao de saldo
while(t<tempo):
	rend = saldo * juros
	saldo = saldo + rend
	t = saldo+ 4/100

	
	
print(round(saldo, 2))
	

-- OUTPUT:
2876.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:47:12) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0
rend=0
# Atualizacao de saldo
while(t<tempo):
	rend = saldo * juros
	saldo = saldo + rend
	t = saldo+ 4/100
	print(round(saldo, 2))
	

-- OUTPUT:
2876.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:10:39) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0
rend=0
# Atualizacao de saldo
while(t<tempo):
	rend = saldo * (uros/100)
	saldo = saldo + rend
	t =t+1
	print(round(saldo, 2))
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 15, in <module>
    rend = saldo * (uros/100)
NameError: name 'uros' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:10:54) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0
rend=0
# Atualizacao de saldo
while(t<tempo):
	rend = saldo * (jros/100)
	saldo = saldo + rend
	t =t+1
	print(round(saldo, 2))
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 15, in <module>
    rend = saldo * (jros/100)
NameError: name 'jros' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:11:14) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0
rend=0
# Atualizacao de saldo
while(t<tempo):
	rend = saldo * (juros/100)
	saldo = saldo + rend
	t =t+1
	print(round(saldo, 2))
	

-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:11:22) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0
rend=0
# Atualizacao de saldo
while(t<tempo):
	rend = saldo * (juros/100)
	saldo = saldo + rend
	t =t+1
	print(round(saldo, 2))
	

-- EXECUTION TIME:
0.21438
-- TEST CASE 1:
---- input:
575.25
6
---- correct output:
598.26
622.19
647.08
672.96
699.88
727.87
---- user output:
598.26
622.19
647.08
672.96
699.88
727.87
-- TEST CASE 2:
---- input:
825.4
3

---- correct output:
858.42
892.75
928.46
---- user output:
858.42
892.75
928.46
-- TEST CASE 3:
---- input:
1275.65
5
---- correct output:
1326.68
1379.74
1434.93
1492.33
1552.02
---- user output:
1326.68
1379.74
1434.93
1492.33
1552.02
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
